feat: Added css classes for display and correct responsabilities separation.

--- a/mhw2.css
+++ b/mhw2.css
@@ -348,6 +348,18 @@ header {
     fill: red;
 }
 
+.d-none{
+    display: none;
+}
+
+.d-block{
+    display: block;
+}
+
+.d-flex{
+    display: flex;
+}
+
 /*MEDIA QUERIES*/
 @media screen and (max-width: 730px) {
 
